[gd_scene load_steps=5 format=3 uid="uid://m5h6qcof87de"]

[ext_resource type="Texture2D" uid="uid://bhlf1oe2g6quu" path="res://sprites/AppleTree_allSeasons.png" id="1_avsvi"]
[ext_resource type="Script" uid="uid://da7ywvqyb14s2" path="res://scripts/tree.gd" id="1_vplca"]
[ext_resource type="AudioStream" uid="uid://b2ron8k3rplpt" path="res://sounds/wood_fall.wav" id="3_viusy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vplca"]
size = Vector2(83, 114)

[node name="Tree" type="Area2D" groups=["trees"]]
script = ExtResource("1_vplca")

[node name="TreeSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_avsvi")
hframes = 5
vframes = 3
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_vplca")

[node name="GrowTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="FallPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_viusy")
bus = &"Sound"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GrowTimer" to="." method="_on_grow_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="finished" from="FallPlayer" to="." method="_on_fall_player_finished"]
